fixed missing margin on bottom of leaderboard

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -71,7 +71,7 @@ html, body {
 	width: 38%;
 	max-width: 530px;
 	min-height: 400px;
-	margin: 0 10px 0 0;
+	margin: 0 10px 10px 0;
 }
 
 .newday-state {
